Projet total/Assembleur/tests/good/testfile-good-comment.ms
; comments start with a semicolon
add %rax %rbx %rcx ; and can be anywhere
sub %rax %rbx %rcx