Projet total/Assembleur/tests/bad/testfile-bad-comment.ms
add %rax ; comments span the whole line ; %rbx %rcx
